# resx-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
data/: de.resx  en.resx
resx_hooks/: __init__.py  check_all.py  check_empty_values.py  check_keys_consistency.py  check_placeholders.py  common.py  resx_parser.py
tests/: __init__.py  helpers.py  test_check_empty_values.py  test_check_keys_consistency.py  test_check_placeholders.py
